2005-02-21  Not Zed  <NotZed@Ximian.com>

	** See bug #71003

	* mail-component.c (impl_quit): add a new state MC_QUIT_THREADS to
	wait for all mail threads to finish before quitting.

2005-02-23  Jeffrey Stedfast  <fejj@novell.com>

	* em-format-html.c (efh_format_header): Don't use the pre-UTF-8
	converted subject header string from the CamelMimeMessage object,
	decode it ourselves using the the user's override charset. Fixes
	bug #62109.

2005-02-21  Not Zed  <NotZed@Ximian.com>

	** See bug #34153 and no doubt duplicates

	* mail-component.c (impl_requestQuit): use the VISIBLE count not
	the TOTAL count to check if there are unsent emails.

2005-02-21  Not Zed  <NotZed@Ximian.com>

	** See bug #71528.

	* em-migrate.c (remove_system_searches, em_migrate_1_4): remove
	all 'system' searches when upgrading from pre 2.0.

2005-02-21  Not Zed  <NotZed@Ximian.com>

	** See bug #71967

	* em-account-editor.c (emae_receive_options_extra_item): make sure
	we track the keep_on_server setting in the e-account, not just the
	url (hack).

2005-02-23  Hans Petter Jansson  <hpj@novell.com>

	* mail-session.c:
	* mail-config.c: Include <libedataserverui/e-passwords.h>.

2005-02-22  Not Zed  <NotZed@Ximian.com>

	* em-account-editor.c (emae_send_page): fix argument order to
	memset.
	(emae_security_page): fix the non-have_nss case.

2005-02-22  Marco Pesenti Gritti  <marco@gnome.org>

	* mail/em-popup.c: (emp_apps_open_in), (emp_standard_menu_factory):
	Use gnome-vfs API to launch external applications

2005-02-22  Not Zed  <NotZed@Ximian.com>

	** See bug #40515

	* mail-config.c (mail_config_signature_run_script): run the script
	using /bin/sh -c, so arguments may be passed to the script.

2005-02-22  Not Zed  <NotZed@Ximian.com>

	** See bug #68866

	* em-format-quote.c (emfq_format_headers): line-feed after all
	headers for blind people.

2005-02-21  Not Zed  <NotZed@Ximian.com>

	** See bug #35219

	* em-utils.c (em_utils_flag_for_followup_clear): clear the flag